--- a/BartenderSupportSystem/Server/appsettings.json
+++ b/BartenderSupportSystem/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BartenderSupportSystem.Server-6FB252CD-A062-4E14-9BA9-52BEB35FA8E6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BartenderSupportSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
