--- a/.gitignore
+++ b/.gitignore
@@ -339,4 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
-BartenderSupportSystem/Server/wwwroot
+BartenderSupportSystem/Server/wwwroot/*
