Add admin user generation. Add FluentValidation dependency for server side validation.

--- a/BartenderSupportSystem/Server/appsettings.json
+++ b/BartenderSupportSystem/Server/appsettings.json
@@ -16,5 +16,8 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AdminUserEmail": "barcat75@gmail.com",
+  "AdminUserPswd": "HuskTheBest75_"
 }
+
