--- a/BartenderSupportSystem/Server/BartenderSupportSystem.Server.csproj
+++ b/BartenderSupportSystem/Server/BartenderSupportSystem.Server.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="9.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
 	</ItemGroup>
@@ -80,6 +81,7 @@
 	<ItemGroup>
 		<Folder Include="Data\Mappers\Implementation\TestSystem\" />
 		<Folder Include="Data\Mappers\Interfaces\TestSystem\" />
+		<Folder Include="Validators\TestSystem\" />
 	</ItemGroup>
 
 </Project>
