--- a/BartenderSupportSystem/Server/BartenderSupportSystem.Server.csproj
+++ b/BartenderSupportSystem/Server/BartenderSupportSystem.Server.csproj
@@ -77,11 +77,21 @@
 		</ItemGroup>
 	</Target>
 
+	<ItemGroup>
+	  <Content Remove="wwwroot\bootstrap.min.css" />
+	</ItemGroup>
+
 
 
 	<ItemGroup>
 		<Folder Include="wwwroot\cocktails\" />
 		<Folder Include="wwwroot\drinks\" />
+	</ItemGroup>
+
+
+
+	<ItemGroup>
+	  <None Include="wwwroot\bootstrap.min.css" />
 	</ItemGroup>
 
 </Project>
