--- a/BartenderSupportSystem/Server/ClientApp/package.json
+++ b/BartenderSupportSystem/Server/ClientApp/package.json
@@ -38,6 +38,8 @@
     "@typescript-eslint/parser": "^4.10.0",
     "codelyzer": "^6.0.0",
     "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -45,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
