--- a/BartenderSupportSystem/Server/ClientApp/package.json
+++ b/BartenderSupportSystem/Server/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "echo starting && ng serve",
+    "start": "echo hello && ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "eslint . --ext .ts",
