--- a/BartenderSupportSystem/Server/appsettings.json
+++ b/BartenderSupportSystem/Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "BartenderSupportSystemConnection": "Server=(localdb)\\mssqllocaldb;Database=BartenderSupportSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Local": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=BartenderSupportSystem",
+    "Docker": "Server=postgres-db,5432;Database=StudyNet; User ID =postgres; Password =postgres"
   },
   "Logging": {
     "LogLevel": {
